New script, https-redirect

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,13 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] https-redirect detects HTTP servers that redirect to the same port, but
+  with HTTPS. Some nginx servers do this, which made ssl-* scripts not run
+  properly. [Daniel Miller]
+
 o [NSE][GH#1236] Added broadcast-jenkins-discover to discover Jenkins servers
   on a LAN by sending a discovery broadcast probe. [Brendan Coles]
 
-o [NSE][GH#1232] Added broadcast-hid-discoveryd to discover HID devices 
+o [NSE][GH#1232] Added broadcast-hid-discoveryd to discover HID devices
   on a LAN by sending a discoveryd network broadcast probe. [Brendan Coles]
 
 o New service probe and match lines for adb, the Android Debug Bridge, which
