--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#1233] Fix brute.lua's BruteSocket wrapper, which was crashing Nmap
+  with an assertion failure due to socket mixup [Daniel Miller]:
+    nmap: nse_nsock.cc:672: int receive_buf(lua_State*, int, lua_KContext): Assertion `lua_gettop(L) == 7' failed.
+
 o [NSE][GH#1254] Handle an error condition in smb-vuln-ms17-010 caused by IPS
   closing the connection. [Clément Notin]
 
