--- a/CHANGELOG
+++ b/CHANGELOG
@@ -55,8 +55,8 @@ o [NSE][GH#1220] Fix bug in http-vuln-cve2006-3392 that prevented the script to
 o [NSE][GH#1218] Fix bug related to screen rendering in NSE library tn3270. This
   patch also improves the brute force script tso-brute. [mainframed]
 
-o [NSE][GH#1209] Fix SIP, SASL, and HTTP Digest authentication when the algorithm
-  contains lowercase characters. [Jeswin Mathai]
+o [NSE][GH#1209] Fix SIP, SASL, and HTTP Digest authentication when
+  the algorithm contains lowercase characters. [Jeswin Mathai]
 
 o [GH#1204] Nmap could be fooled into ignoring TCP response packets if they
   used an unknown TCP Option, which would misalign the validation, causing it
