--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o Emergency fix to Nmap's birthday announcement so Nmap wishes itself
+  a "Happy 21st Birthday" rather than "Happy 21th" in verbose mode
+  (-v) on September 1, 2018. [David Fifield]
+
 o [NSE] Completely removed the bit.lua NSE library. All of its functions are
   replaced by native Lua bitwise operations, except for `arshift` (arithmetic
   shift) which has been moved to the bits.lua library. [Daniel Miller]
