--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,9 @@ o Emergency fix to Nmap's birthday announcement so Nmap wishes itself
   a "Happy 21st Birthday" rather than "Happy 21th" in verbose mode
   (-v) on September 1, 2018. [Daniel Miller]
 
+o [NSE] New knx.lua library holds common functions and definitions for
+  communicating with KNX/Konnex devices. [Daniel Miller]
+
 o [NSE] Completely removed the bit.lua NSE library. All of its functions are
   replaced by native Lua bitwise operations, except for `arshift` (arithmetic
   shift) which has been moved to the bits.lua library. [Daniel Miller]
