--- a/CHANGELOG
+++ b/CHANGELOG
@@ -25,10 +25,10 @@ o [NSE] Completely removed the bit.lua NSE library. All of its functions are
   replaced by native Lua bitwise operations, except for `arshift` (arithmetic
   shift) which has been moved to the bits.lua library. [Daniel Miller]
 
-o [GH#1291][GH#34] Use pcap_create instead of pcap_live_open in Nmap, and set
-  immediate mode on the pcap descriptor. This solves packet loss problems on
-  Linux and may improve performance on other platforms. [Daniel Cater, Mike
-  Pontillo, Daniel Miller]
+o [GH#1291][GH#34][GH#1339] Use pcap_create instead of pcap_live_open in Nmap,
+  and set immediate mode on the pcap descriptor. This solves packet loss
+  problems on Linux and may improve performance on other platforms.
+  [Daniel Cater, Mike Pontillo, Daniel Miller]
 
 o [GH#1150] Start host timeout clocks when the first probe is sent to a host,
   not when the hostgroup is started. Sometimes a host doesn't get probes until
