--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#1355] When searching for Lua header files, actually use them where they
+  are found instead of forcing /usr/include. [Fabrice Fontaine, Daniel Miller]
+
 o [NSE][GH#1331] Script traceroute-geolocation no longer crashes when
   www.GeoPlugin.net returns null coordinates [Michal Kubenka, nnposter]
 
